--- a/Calendar.csproj
+++ b/Calendar.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 	<ItemGroup>
 	  <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
+	  <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Resource Include="icon.ico">
